修复增加股票bug，增加接口
